Add mobile menu functionality and styles for responsive navigation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li><a href="#kontakt">Kontakt</a></li>
             <li><a href="en/index.html" class="language-switch">EN</a></li>
         </ul>
+        <button class="mobile-menu-btn" aria-label="Menu">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
 
     <!-- Hero Section -->
