--- a/en/index.html
+++ b/en/index.html
@@ -22,6 +22,9 @@
             <li><a href="#contact">Contact</a></li>
             <li><a href="../index.html" class="language-switch">CS</a></li>
         </ul>
+        <button class="mobile-menu-btn" aria-label="Menu">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
 
     <!-- Hero Section -->
