Add mobile menu implementation and enhance styles for improved responsiveness

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
             <i class="fas fa-bars"></i>
         </button>
     </nav>
+    
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="#sluzby">Služby</a></li>
+            <li><a href="#cilova-skupina">Cílová skupina</a></li>
+            <li><a href="#reference">Reference</a></li>
+            <li><a href="#kontakt">Kontakt</a></li>
+            <li><a href="en/index.html" class="language-switch">EN</a></li>
+        </ul>
+    </div>
 
     <!-- Hero Section -->
     <section id="hero" class="hero-section">
