--- a/en/index.html
+++ b/en/index.html
@@ -26,6 +26,17 @@
             <i class="fas fa-bars"></i>
         </button>
     </nav>
+    
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#target-audience">Target Audience</a></li>
+            <li><a href="#references">References</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="../index.html" class="language-switch">CS</a></li>
+        </ul>
+    </div>
 
     <!-- Hero Section -->
     <section id="hero" class="hero-section">
