--- a/index.html
+++ b/index.html
@@ -291,6 +291,9 @@
                         <div class="form-group">
                             <textarea name="message" placeholder="Vaše zpráva" rows="5" required></textarea>
                         </div>
+                        <div class="form-group">
+                            <div class="g-recaptcha" data-sitekey="6LczOcArAAAAAMpFMrngM0VvEenHPK8nFEr0Y9EO"></div>
+                        </div>
                         <button type="submit" class="submit-button">Odeslat zprávu</button>
                     </form>
                 </div>
@@ -329,6 +332,7 @@
         </div>
     </footer>
 
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
