Enhance cookie consent management by adding multi-language support and dynamic banner text updates based on user language configuration. Update form validation messages and button texts to be language-specific. Modify HTML links for language switching to point to the correct URLs.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- Configuration Script -->
+    <script src="config.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -39,7 +42,7 @@
             <li><a href="#cilova-skupina">Cílová skupina</a></li>
             <li><a href="#reference">Reference</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
-            <li><a href="en/index.html" class="language-switch">EN</a></li>
+            <li><a href="https://paajae.github.io/post-trading-en/" class="language-switch">EN</a></li>
         </ul>
         <button class="mobile-menu-btn" aria-label="Menu">
             <i class="fas fa-bars"></i>
@@ -53,7 +56,7 @@
             <li><a href="#cilova-skupina">Cílová skupina</a></li>
             <li><a href="#reference">Reference</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
-            <li><a href="en/index.html" class="language-switch">EN</a></li>
+            <li><a href="https://paajae.github.io/post-trading-en/" class="language-switch">EN</a></li>
         </ul>
     </div>
 
