--- a/en/index.html
+++ b/en/index.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- Configuration Script -->
+    <script src="../config.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -39,7 +42,7 @@
             <li><a href="#target-audience">Target Audience</a></li>
             <li><a href="#references">References</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="../index.html" class="language-switch">CS</a></li>
+            <li><a href="https://paajae.github.io/post-trading/" class="language-switch">CS</a></li>
         </ul>
         <button class="mobile-menu-btn" aria-label="Menu">
             <i class="fas fa-bars"></i>
@@ -53,7 +56,7 @@
             <li><a href="#target-audience">Target Audience</a></li>
             <li><a href="#references">References</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="../index.html" class="language-switch">CS</a></li>
+            <li><a href="https://paajae.github.io/post-trading/" class="language-switch">CS</a></li>
         </ul>
     </div>
 
