--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="#cilova-skupina">Cílová skupina</a></li>
             <li><a href="#reference">Reference</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
-            <li><a href="https://post-trading.com" class="language-switch">EN</a></li>
+            <li><a href="https://www.post-trading.com" class="language-switch">EN</a></li>
         </ul>
         <button class="mobile-menu-btn" aria-label="Menu">
             <i class="fas fa-bars"></i>
@@ -56,7 +56,7 @@
             <li><a href="#cilova-skupina">Cílová skupina</a></li>
             <li><a href="#reference">Reference</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
-            <li><a href="https://post-trading.com" class="language-switch">EN</a></li>
+            <li><a href="https://www.post-trading.com" class="language-switch">EN</a></li>
         </ul>
     </div>
 
