--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Účtování aktivního tradingu na kapitálových trzích</h1>
-                    <p class="hero-subtitle">Specializované účetní služby pro investory a obchodníky s cennými papíry. Správné účtování transakcí, reporting a konzultace v souladu s českými účetními standardy.</p>
-                    <button class="cta-button">Konzultace zdarma</button>
+                    <p class="hero-subtitle">Specializované účetní služby pro investory a obchodníky s cennými papíry. Správné účtování transakcí, reporting a konzultace v souladu s českými účetními a daňovými standardy.</p>
+                    <button class="cta-button">Nezávazná konzultace</button>
                 </div>
                 <div class="hero-image">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=600&h=400&fit=crop" alt="Účtování tradingu">
@@ -154,6 +154,7 @@
                         <li>Investiční poradci - licencované investiční butiky</li>
                         <li>Family office</li>
                         <li>Dodržování regulatorních požadavků ČNB</li>
+                        <li>Vázaní poskytovatelé</li>
                     </ul>
                 </div>
                 <div class="target-card">
@@ -258,11 +259,11 @@
                 <div class="infrastructure-item">
                     <i class="fas fa-users-cog fa-2x"></i>
                     <h3>Tým</h3>
-                    <p>Tým vyškolených účetních a spolupracující daňoví poradci</p>
+                    <p>Tým zkušených a vyškolených účetních a spolupracující daňoví poradci</p>
                 </div>
                 <div class="infrastructure-item">
                     <i class="fas fa-shield-alt fa-2x"></i>
-                    <h3>Audit</h3>
+                    <h3>Audit a daně</h3>
                     <p>Prověřeno audity a daňovými kontrolami</p>
                 </div>
             </div>
@@ -275,12 +276,14 @@
             <h2>Reference</h2>
             <div class="reference-card">
                 <div class="reference-content">
-                    <h3>NextWealth.cz</h3>
+                    <h3><a href="https://nextwealth.cz/" target="_blank">Next Wealth s.r.o.</a></h3>
                     <p>Obchodník s cennými papíry s oprávněním ČNB – Progresivní investiční butik</p>
                     <div class="reference-details">
                         <span><i class="fas fa-check"></i> Kompletní účetní služby</span>
-                        <span><i class="fas fa-check"></i> Regulatorní reporting</span>
+                        <span><i class="fas fa-check"></i> Regulatorní reporting vůči ČNB</span>
                         <span><i class="fas fa-check"></i> Daňové konzultace</span>
+                        <span><i class="fas fa-check"></i> Účtování tradingových operací pro klienty - investory</span>
+                        <span><i class="fas fa-check"></i> Licenční služby - řízení projektu a konzultace</span>
                     </div>
                 </div>
             </div>
@@ -306,21 +309,21 @@
                         <i class="fas fa-phone"></i>
                         <div>
                             <strong>Telefon</strong>
-                            <p>+420 XXX XXX XXX</p>
+                            <p><a href="tel:+420734850771" type="tel">+420 734 850 771</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <strong>Email</strong>
-                            <p>info@jasper.systems</p>
+                            <p><a href="mailto:info@jasper.systems" type="email">info@jasper.systems</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <strong>Adresa</strong>
-                            <p>Praha, Česká republika</p>
+                            <p>Senovážné náměstí 23, 110 00 Praha, Česká republika</p>
                         </div>
                     </div>
                 </div>
