--- a/index.html
+++ b/index.html
@@ -326,6 +326,20 @@
                             <p>Senovážné náměstí 23, 110 00 Praha, Česká republika</p>
                         </div>
                     </div>
+                    
+                    <!-- Google Map -->
+                    <div class="map-container">
+                        <iframe 
+                            src="https://maps.google.com/maps?q=Senovážné+náměstí+23,+110+00+Praha,+Czech+Republic&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                            width="100%" 
+                            height="300" 
+                            style="border:0; border-radius: 8px;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade"
+                            title="JASPER Systems Location - Senovážné náměstí 23, Praha">
+                        </iframe>
+                    </div>
                 </div>
                 <div class="contact-form">
                     <h3>Napište nám</h3>
