Fix CTA button scrolling and standardize contact section ID
- Change Czech contact section from id='kontakt' to id='contact'
- Update navigation links to use #contact
- Fix CTA buttons to scroll to #contact in both versions
- Remove CNAME from sync script to prevent domain conflicts
- Both versions now use consistent #contact ID

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <li><a href="#sluzby">Služby</a></li>
             <li><a href="#cilova-skupina">Cílová skupina</a></li>
             <li><a href="#reference">Reference</a></li>
-            <li><a href="#kontakt">Kontakt</a></li>
+            <li><a href="#contact">Kontakt</a></li>
             <li><a href="https://www.post-trading.com" class="language-switch">EN</a></li>
         </ul>
         <button class="mobile-menu-btn" aria-label="Menu">
@@ -96,7 +96,7 @@
             <li><a href="#sluzby">Služby</a></li>
             <li><a href="#cilova-skupina">Cílová skupina</a></li>
             <li><a href="#reference">Reference</a></li>
-            <li><a href="#kontakt">Kontakt</a></li>
+            <li><a href="#contact">Kontakt</a></li>
             <li><a href="https://www.post-trading.com" class="language-switch">EN</a></li>
         </ul>
     </div>
@@ -305,7 +305,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="kontakt" class="contact-section">
+    <section id="contact" class="contact-section">
         <div class="container">
             <div class="contact-grid">
                 <div class="contact-info">
