--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <button class="cta-button">Nezávazná konzultace</button>
                 </div>
                 <div class="hero-image">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=600&h=400&fit=crop" alt="Účtování tradingu">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=600&fit=crop" alt="Účtování tradingu">
                 </div>
             </div>
         </div>
@@ -407,7 +407,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 JASPER Systems. Všechna práva vyhrazena.</p>
+                <p>&copy; <script>document.write(new Date().getFullYear())</script> JASPER Systems. Všechna práva vyhrazena.</p>
             </div>
         </div>
     </footer>
