--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     krátkodobých cenových pohybů.</p>
 
                 <p>V závislosti na investiční strategii má investor své portfolio v hodnotě desítek milionů korun v mixu
-                    různých druhů finančních instrumentů, často s využitím úvěrů (tzv. finanční páky).</p>
+                    různých druhů finančních instrumentů, často s využitím úvěrů (tzv. finanční páky). Často také využíívají služeb zahraničních bank - například ze Švýcarska nebo Lichtenštejnska.</p>
 
                 <p>Na rozdíl od pasivního investování, kde investoři drží aktiva dlouhodobě a spoléhají na růst hodnoty
                     v čase, aktivní tradeři se snaží využívat dynamiky trhu, volatility a aktuálních trendů, aby
